# vita-clone-high

./: CMakeLists.txt  Makefile  README.md  futurepr0n2d.elf  futurepr0n2d.velf  futurepr0n2d.vpk  main.c  param.sfo
src/: main.c
src/audio/: vita_audio.c
